--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
+        "react-sweetalert2": "^0.6.0",
         "react-table": "^7.8.0",
+        "sweetalert2": "^11.7.31",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
